removed three for master branch, use the react-three branch if threejs is needed

--- a/src/_static/index.html
+++ b/src/_static/index.html
@@ -2,18 +2,12 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Forest Walker</title>
+    <title>Webpack Boiler</title>
 
     <link rel="stylesheet" href="style/main.css"></link>
   </head>
   <body style="margin: 0">
-      <div id="ui"></div>
-      <div id="container"></div>
-
-      <script src="assets/vendor/libs/stats.min.js"></script>
-
-      <script src="assets/vendor/three.min.js"></script>
-      <!-- <script src="assets/vendor/controls/OrbitControls.js"></script> -->
+      <div id="app"></div>
 
       <script type="text/javascript" src="/main.min.js"></script>
 
